fix comp name alignment

--- a/src/components/Reservation/reservation.module.css
+++ b/src/components/Reservation/reservation.module.css
@@ -21,6 +21,13 @@
     font-weight: bold;
 }
 
+.compName{
+    width: 16.25%;
+    padding-left: 7%;
+    text-align: left;
+    font-weight: bold;
+}
+
 .textBlock{
     color:#143154;
 }
